--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
