--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
     "@mui/material-nextjs": "^5.15.7",
+    "@mui/x-date-pickers": "^6.19.3",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18",
