--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "to-words": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
