--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next export",
-    "format": "prettier --check --ignore-path .gitignore .",
-    "format:fix": "prettier --write --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore .",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore . --fix",
+    "format": "prettier --write --ignore-path .gitignore . && eslint --fix --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore .",
+    "prepare": "husky install",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
