--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.7",
     "@mui/material-nextjs": "^5.15.7",
     "@mui/x-date-pickers": "^6.19.3",
+    "@netlify/plugin-nextjs": "^4.41.3",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "moment": "^2.30.1",
